--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,23 @@
 {
-	"name": "sunnysideup/widgets_tagcloudall",
-	"type": "silverstripe-module",
-	"description": "",
-	"homepage": "http://www.silverstripe-webdevelopment.com",
-	"keywords": ["widgets_tagcloudall", "silverstripe"],
-	"license": "Sunny Side Up (BSD-3-Clause and CUSTOM)",
-	"authors":[
-		{
-			"name": "Nicolaas Francken",
-			"homepage": "https://github.com/sunnysideup",
-			"email" : "modules@sunnysideup.co.nz",
-			"role" : "lead developer"
-		}
-	],
-	"require":{
-		"silverstripe/framework": "~2.4"
-	},
-	"extra": {
-		"installer-name": "widgets_tagcloudall"
-	}	
+    "name": "sunnysideup/widgets_tagcloudall",
+    "type": "silverstripe-module",
+    "description": "",
+    "keywords": [
+        "widgets_tagcloudall",
+        "silverstripe"
+    ],
+    "license": "Sunny Side Up (BSD-3-Clause and CUSTOM)",
+    "authors": [
+        {
+            "name": "Nicolaas Francken",
+            "email": "modules@sunnysideup.co.nz",
+            "role": "lead developer"
+        }
+    ],
+    "require": {
+        "silverstripe/framework": "~2.4"
+    },
+    "extra": {
+        "installer-name": "widgets_tagcloudall"
+    }
 }
