--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,10 @@
     "type": "silverstripe-module",
     "description": "",
     "keywords": [
-        "widgets_tagcloudall",
-        "silverstripe"
+        "Silverstripe-CMS",
+        "CMS",
+        "Silverstripe",
+        "widgets_tagcloudall"
     ],
     "license": "Sunny Side Up (BSD-3-Clause and CUSTOM)",
     "authors": [
@@ -15,7 +17,8 @@
         }
     ],
     "require": {
-        "silverstripe/framework": "~2.4"
+        "silverstripe/framework": "~2.4",
+        "silverstripe/cms": "~2.4"
     },
     "extra": {
         "installer-name": "widgets_tagcloudall"
